Refactored sizing to prevent zoom when typing on mobile

--- a/style.css
+++ b/style.css
@@ -146,6 +146,10 @@ body {
     background-color: var(--background-100);
 }
 
+#city-input {
+    font-size: 1rem;
+}
+
 
 #city-input::placeholder {
     color: var(--text-600);
@@ -156,6 +160,7 @@ body {
     border-radius: .4rem;
     background-color: var(--background-100);
     color: var(--text-900);
+    font-size: 1rem;
 }
 
 .icon {
@@ -169,11 +174,12 @@ body {
 }
 
 #f-c {
-    width: 10rem;
+    width: 11rem;
     height: 1.7rem;
     border: .2rem var(--accent-900) solid;
     border-radius: .5rem;
     background-color: var(--background-100);
-    color: var(--text-900);
+    color: var(--text-950);
     margin: 1rem 0;
+    font-size: 1rem;
 }
